kubernetes/apps/joplin/joplin/app/route.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: joplin
  namespace: joplin
  annotations:
    external-dns.alpha.kubernetes.io/enabled: "true"
spec:
  parentRefs:
    - name: shared
      namespace: gateway
      sectionName: https
  hostnames:
    - joplin.blackcats.cc
  rules:
    - backendRefs:
        - name: joplin
          port: 22300
